--- a/spring-learn3/pom.xml
+++ b/spring-learn3/pom.xml
@@ -32,6 +32,15 @@
             <version>2.10.5</version>
         </dependency>
 
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.61</version>
+        </dependency>
+
+
+
     </dependencies>
 
 
